--- a/styles/Article.less
+++ b/styles/Article.less
@@ -33,8 +33,8 @@
     position: absolute;
     bottom: 0;
     left: 50%;
-    font-size: 12px;
-    color: grey;
+    font-size: 1.5rem;
+    color: green;
     cursor: pointer;
     transform: translate(-50%);
     background-color: white;
