--- a/styles/Menu.less
+++ b/styles/Menu.less
@@ -18,11 +18,19 @@
   z-index: 2; /* This set the layer level of the element, it has precendence over initial level of 1*/
 }
 
+.menu ul {
+  padding: 0;
+}
+
 .menu ul li{
   list-style-type: none;
   font-size: 32px;
   padding: 30px 0;
   text-align: center;
+}
+
+.menu ul li:hover{
+  background-color: forestgreen;
 }
 
 .menu--open {
